--- a/dashboard.html
+++ b/dashboard.html
@@ -1078,11 +1078,11 @@
         color: inherit !important;
         text-decoration: none !important;
       }
-      .footer__utility-spacer-wrapper {
+      .hidden inline-block-lg {
         display: none !important;
       }
       @media (min-width: 1128px) {
-        .footer__utility-spacer-wrapper {
+        .hidden inline-block-lg {
           display: inline-block !important;
         }
       }
@@ -3327,7 +3327,7 @@
                               © 2022 Airbnb, Inc.
                             </div>
                             <div class="footer__utility">
-                              <span class="footer__utility-spacer-wrapper"
+                              <span class="hidden inline-block-lg"
                                 ><span class="footer__utility-spacer" aria-hidden="true"
                                   >·</span
                                 ></span
@@ -3471,7 +3471,7 @@
                                 © 2022 Airbnb, Inc.
                               </div>
                               <div class="footer__utility">
-                                <span class="footer__utility-spacer-wrapper"
+                                <span class="hidden inline-block-lg"
                                   ><span class="footer__utility-spacer" aria-hidden="true"
                                     >·</span
                                   ></span
@@ -3499,7 +3499,7 @@
                               © 2022 Airbnb, Inc.
                             </div>
                             <div class="footer__utility">
-                              <span class="footer__utility-spacer-wrapper"
+                              <span class="hidden inline-block-lg"
                                 ><span class="footer__utility-spacer" aria-hidden="true"
                                   >·</span
                                 ></span
