--- a/help.html
+++ b/help.html
@@ -5831,7 +5831,7 @@
                                 © 2022 Airbnb, Inc.
                               </div>
                               <div class="footer__utility">
-                                <span class="footer__utility-spacer-wrapper"
+                                <span class="hidden inline-block-lg"
                                   ><span class="footer__utility-spacer" aria-hidden="true"
                                     >·</span
                                   ></span
@@ -5974,7 +5974,7 @@
                                   © 2022 Airbnb, Inc.
                                 </div>
                                 <div class="footer__utility">
-                                  <span class="footer__utility-spacer-wrapper"
+                                  <span class="hidden inline-block-lg"
                                     ><span class="footer__utility-spacer" aria-hidden="true"
                                       >·</span
                                     ></span
@@ -6003,7 +6003,7 @@
                                 © 2022 Airbnb, Inc.
                               </div>
                               <div class="footer__utility">
-                                <span class="footer__utility-spacer-wrapper"
+                                <span class="hidden inline-block-lg"
                                   ><span class="footer__utility-spacer" aria-hidden="true"
                                     >·</span
                                   ></span
