--- a/privacy-and-sharing.html
+++ b/privacy-and-sharing.html
@@ -1603,7 +1603,7 @@
                                     © 2022 Airbnb, Inc.
                                   </div>
                                   <div class="footer__utility">
-                                    <span class="footer__utility-spacer-wrapper"
+                                    <span class="hidden inline-block-lg"
                                       ><span class="footer__utility-spacer" aria-hidden="true"
                                         >·</span
                                       ></span
@@ -1753,7 +1753,7 @@
                                     </div>
                                     <div class="footer__utility">
                                       <span
-                                        class="footer__utility-spacer-wrapper"
+                                        class="hidden inline-block-lg"
                                         ><span
                                           class="footer__utility-spacer"
                                           aria-hidden="true"
@@ -1786,7 +1786,7 @@
                                     © 2022 Airbnb, Inc.
                                   </div>
                                   <div class="footer__utility">
-                                    <span class="footer__utility-spacer-wrapper"
+                                    <span class="hidden inline-block-lg"
                                       ><span class="footer__utility-spacer" aria-hidden="true"
                                         >·</span
                                       ></span
