--- a/products.html
+++ b/products.html
@@ -7310,7 +7310,7 @@
                                             </div>
                                             <div class="footer__utility">
                                               <span
-                                                class="footer__utility-spacer-wrapper"
+                                                class="hidden inline-block-lg"
                                                 ><span
                                                   class="footer__utility-spacer"
                                                   aria-hidden="true"
@@ -7482,7 +7482,7 @@
                                               </div>
                                               <div class="footer__utility">
                                                 <span
-                                                  class="footer__utility-spacer-wrapper"
+                                                  class="hidden inline-block-lg"
                                                   ><span
                                                     class="footer__utility-spacer"
                                                     aria-hidden="true"
@@ -7525,7 +7525,7 @@
                                             </div>
                                             <div class="footer__utility">
                                               <span
-                                                class="footer__utility-spacer-wrapper"
+                                                class="hidden inline-block-lg"
                                                 ><span
                                                   class="footer__utility-spacer"
                                                   aria-hidden="true"
@@ -20839,7 +20839,7 @@
                                           </div>
                                           <div class="footer__utility">
                                             <span
-                                              class="footer__utility-spacer-wrapper"
+                                              class="hidden inline-block-lg"
                                               ><span
                                                 class="footer__utility-spacer"
                                                 aria-hidden="true"
@@ -21007,7 +21007,7 @@
                                             </div>
                                             <div class="footer__utility">
                                               <span
-                                                class="footer__utility-spacer-wrapper"
+                                                class="hidden inline-block-lg"
                                                 ><span
                                                   class="footer__utility-spacer"
                                                   aria-hidden="true"
@@ -21050,7 +21050,7 @@
                                           </div>
                                           <div class="footer__utility">
                                             <span
-                                              class="footer__utility-spacer-wrapper"
+                                              class="hidden inline-block-lg"
                                               ><span
                                                 class="footer__utility-spacer"
                                                 aria-hidden="true"
