--- a/profile.html
+++ b/profile.html
@@ -2883,7 +2883,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                     © 2022 Airbnb, Inc.
                                   </div>
                                   <div class="footer__utility">
-                                    <span class="footer__utility-spacer-wrapper"
+                                    <span class="hidden inline-block-lg"
                                       ><span class="footer__utility-spacer" aria-hidden="true"
                                         >·</span
                                       ></span
@@ -3033,7 +3033,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                     </div>
                                     <div class="footer__utility">
                                       <span
-                                        class="footer__utility-spacer-wrapper"
+                                        class="hidden inline-block-lg"
                                         ><span
                                           class="footer__utility-spacer"
                                           aria-hidden="true"
@@ -3066,7 +3066,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                     © 2022 Airbnb, Inc.
                                   </div>
                                   <div class="footer__utility">
-                                    <span class="footer__utility-spacer-wrapper"
+                                    <span class="hidden inline-block-lg"
                                       ><span class="footer__utility-spacer" aria-hidden="true"
                                         >·</span
                                       ></span
