--- a/experiences.html
+++ b/experiences.html
@@ -1426,11 +1426,11 @@
         color: inherit !important;
         text-decoration: none !important;
       }
-      .footer__utility-spacer-wrapper {
+      .hidden inline-block-lg {
         display: none !important;
       }
       @media (min-width: 1128px) {
-        .footer__utility-spacer-wrapper {
+        .hidden inline-block-lg {
           display: inline-block !important;
         }
       }
@@ -4950,7 +4950,7 @@
                               © 2022 Airbnb, Inc.
                             </div>
                             <div class="footer__utility">
-                              <span class="footer__utility-spacer-wrapper"
+                              <span class="hidden inline-block-lg"
                                 ><span class="footer__utility-spacer" aria-hidden="true"
                                   >·</span
                                 ></span
@@ -5094,7 +5094,7 @@
                                 © 2022 Airbnb, Inc.
                               </div>
                               <div class="footer__utility">
-                                <span class="footer__utility-spacer-wrapper"
+                                <span class="hidden inline-block-lg"
                                   ><span class="footer__utility-spacer" aria-hidden="true"
                                     >·</span
                                   ></span
@@ -5122,7 +5122,7 @@
                               © 2022 Airbnb, Inc.
                             </div>
                             <div class="footer__utility">
-                              <span class="footer__utility-spacer-wrapper"
+                              <span class="hidden inline-block-lg"
                                 ><span class="footer__utility-spacer" aria-hidden="true"
                                   >·</span
                                 ></span
