--- a/invite-friends.html
+++ b/invite-friends.html
@@ -474,7 +474,7 @@
                               © 2022 Airbnb, Inc.
                             </div>
                             <div class="footer__utility">
-                              <span class="footer__utility-spacer-wrapper"
+                              <span class="hidden inline-block-lg"
                                 ><span class="footer__utility-spacer" aria-hidden="true"
                                   >·</span
                                 ></span
@@ -615,7 +615,7 @@
                                 © 2022 Airbnb, Inc.
                               </div>
                               <div class="footer__utility">
-                                <span class="footer__utility-spacer-wrapper"
+                                <span class="hidden inline-block-lg"
                                   ><span class="footer__utility-spacer" aria-hidden="true"
                                     >·</span
                                   ></span
@@ -643,7 +643,7 @@
                               © 2022 Airbnb, Inc.
                             </div>
                             <div class="footer__utility">
-                              <span class="footer__utility-spacer-wrapper"
+                              <span class="hidden inline-block-lg"
                                 ><span class="footer__utility-spacer" aria-hidden="true"
                                   >·</span
                                 ></span
