--- a/merchandising.html
+++ b/merchandising.html
@@ -12953,7 +12953,7 @@
                                                           class="footer__utility"
                                                         >
                                                           <span
-                                                            class="footer__utility-spacer-wrapper"
+                                                            class="hidden inline-block-lg"
                                                             ><span
                                                               class="footer__utility-spacer"
                                                               aria-hidden="true"
@@ -13135,7 +13135,7 @@
                                                             class="footer__utility"
                                                           >
                                                             <span
-                                                              class="footer__utility-spacer-wrapper"
+                                                              class="hidden inline-block-lg"
                                                               ><span
                                                                 class="footer__utility-spacer"
                                                                 aria-hidden="true"
@@ -13180,7 +13180,7 @@
                                                           class="footer__utility"
                                                         >
                                                           <span
-                                                            class="footer__utility-spacer-wrapper"
+                                                            class="hidden inline-block-lg"
                                                             ><span
                                                               class="footer__utility-spacer"
                                                               aria-hidden="true"
