--- a/payment.html
+++ b/payment.html
@@ -1441,7 +1441,7 @@
                                             </div>
                                             <div class="footer__utility">
                                               <span
-                                                class="footer__utility-spacer-wrapper"
+                                                class="hidden inline-block-lg"
                                                 ><span
                                                   class="footer__utility-spacer"
                                                   aria-hidden="true"
@@ -1616,7 +1616,7 @@
                                               </div>
                                               <div class="footer__utility">
                                                 <span
-                                                  class="footer__utility-spacer-wrapper"
+                                                  class="hidden inline-block-lg"
                                                   ><span
                                                     class="footer__utility-spacer"
                                                     aria-hidden="true"
@@ -1659,7 +1659,7 @@
                                             </div>
                                             <div class="footer__utility">
                                               <span
-                                                class="footer__utility-spacer-wrapper"
+                                                class="hidden inline-block-lg"
                                                 ><span
                                                   class="footer__utility-spacer"
                                                   aria-hidden="true"
