--- a/payments/payment-methods.html
+++ b/payments/payment-methods.html
@@ -1681,7 +1681,7 @@
                                     © 2022 Airbnb, Inc.
                                   </div>
                                   <div class="footer__utility">
-                                    <span class="footer__utility-spacer-wrapper"
+                                    <span class="hidden inline-block-lg"
                                       ><span class="footer__utility-spacer" aria-hidden="true"
                                         >·</span
                                       ></span
@@ -1831,7 +1831,7 @@
                                     </div>
                                     <div class="footer__utility">
                                       <span
-                                        class="footer__utility-spacer-wrapper"
+                                        class="hidden inline-block-lg"
                                         ><span
                                           class="footer__utility-spacer"
                                           aria-hidden="true"
@@ -1864,7 +1864,7 @@
                                     © 2022 Airbnb, Inc.
                                   </div>
                                   <div class="footer__utility">
-                                    <span class="footer__utility-spacer-wrapper"
+                                    <span class="hidden inline-block-lg"
                                       ><span class="footer__utility-spacer" aria-hidden="true"
                                         >·</span
                                       ></span
