--- a/resources.html
+++ b/resources.html
@@ -5413,7 +5413,7 @@
                                 © 2022 Airbnb, Inc.
                               </div>
                               <div class="footer__utility">
-                                <span class="footer__utility-spacer-wrapper"
+                                <span class="hidden inline-block-lg"
                                   ><span class="footer__utility-spacer" aria-hidden="true"
                                     >·</span
                                   ></span
@@ -5556,7 +5556,7 @@
                                   © 2022 Airbnb, Inc.
                                 </div>
                                 <div class="footer__utility">
-                                  <span class="footer__utility-spacer-wrapper"
+                                  <span class="hidden inline-block-lg"
                                     ><span class="footer__utility-spacer" aria-hidden="true"
                                       >·</span
                                     ></span
@@ -5585,7 +5585,7 @@
                                 © 2022 Airbnb, Inc.
                               </div>
                               <div class="footer__utility">
-                                <span class="footer__utility-spacer-wrapper"
+                                <span class="hidden inline-block-lg"
                                   ><span class="footer__utility-spacer" aria-hidden="true"
                                     >·</span
                                   ></span
