--- a/trips.html
+++ b/trips.html
@@ -940,7 +940,7 @@
                                     © 2022 Airbnb, Inc.
                                   </div>
                                   <div class="footer__utility">
-                                    <span class="footer__utility-spacer-wrapper"
+                                    <span class="hidden inline-block-lg"
                                       ><span class="footer__utility-spacer" aria-hidden="true"
                                         >·</span
                                       ></span
@@ -1093,7 +1093,7 @@
                                     </div>
                                     <div class="footer__utility">
                                       <span
-                                        class="footer__utility-spacer-wrapper"
+                                        class="hidden inline-block-lg"
                                         ><span
                                           class="footer__utility-spacer"
                                           aria-hidden="true"
@@ -1126,7 +1126,7 @@
                                     © 2022 Airbnb, Inc.
                                   </div>
                                   <div class="footer__utility">
-                                    <span class="footer__utility-spacer-wrapper"
+                                    <span class="hidden inline-block-lg"
                                       ><span class="footer__utility-spacer" aria-hidden="true"
                                         >·</span
                                       ></span
