--- a/wishlists.html
+++ b/wishlists.html
@@ -1488,7 +1488,7 @@
                                     © 2022 Airbnb, Inc.
                                   </div>
                                   <div class="footer__utility">
-                                    <span class="footer__utility-spacer-wrapper"
+                                    <span class="hidden inline-block-lg"
                                       ><span class="footer__utility-spacer" aria-hidden="true"
                                         >·</span
                                       ></span
@@ -1638,7 +1638,7 @@
                                     </div>
                                     <div class="footer__utility">
                                       <span
-                                        class="footer__utility-spacer-wrapper"
+                                        class="hidden inline-block-lg"
                                         ><span
                                           class="footer__utility-spacer"
                                           aria-hidden="true"
@@ -1671,7 +1671,7 @@
                                     © 2022 Airbnb, Inc.
                                   </div>
                                   <div class="footer__utility">
-                                    <span class="footer__utility-spacer-wrapper"
+                                    <span class="hidden inline-block-lg"
                                       ><span class="footer__utility-spacer" aria-hidden="true"
                                         >·</span
                                       ></span
