replace header__logo -> hidden block-lg

--- a/gift.html
+++ b/gift.html
@@ -53,7 +53,7 @@
                               aria-label="Airbnb Homepage"
                               href="/"
                             >
-                              <div class="header__logo-lg">
+                              <div class="hidden block-lg">
                                 <svg
                                   width="102"
                                   height="32"
