--- a/payments/payment-methods.html
+++ b/payments/payment-methods.html
@@ -765,7 +765,7 @@
                                 class="header__brand"
                                 aria-label="Airbnb Homepage"
                                 href="/"
-                                ><div class="header__logo-lg">
+                                ><div class="hidden block-lg">
                                   <svg
                                     width="102"
                                     height="32"
