--- a/signup_login.html
+++ b/signup_login.html
@@ -3081,7 +3081,7 @@
                                 aria-label="Airbnb Homepage"
                                 href="/"
                               >
-                                <div class="header__logo-lg">
+                                <div class="hidden block-lg">
                                   <svg
                                     width="102"
                                     height="32"
@@ -6633,7 +6633,7 @@
                                 aria-label="Airbnb Homepage"
                                 href="/"
                               >
-                                <div class="header__logo-lg">
+                                <div class="hidden block-lg">
                                   <svg
                                     width="102"
                                     height="32"
