--- a/wishlists.html
+++ b/wishlists.html
@@ -598,7 +598,7 @@
                                 class="header__brand"
                                 aria-label="Airbnb Homepage"
                                 href="/"
-                                ><div class="header__logo-lg">
+                                ><div class="hidden block-lg">
                                   <svg
                                     width="102"
                                     height="32"
