replace main_content__header-date-wrapper -> hidden inline-md

--- a/calendar.html
+++ b/calendar.html
@@ -184,7 +184,7 @@
                         July 2022
                       </div>
                       <div class="flex-items-center-content-between">
-                        <div class="main_content__header-date-wrapper">
+                        <div class="hidden inline-md">
                           <div class="main_content__header-date--today">
                             <button
                               aria-label="Today, 1 July 2022, Friday"
@@ -474,7 +474,7 @@
                                             ></path>
                                           </svg>
                                         </div>
-                                        <div class="main_content__header-date-wrapper">
+                                        <div class="hidden inline-md">
                                           <svg
                                             viewBox="0 0 16 16"
                                             xmlns="http://www.w3.org/2000/svg"
@@ -776,7 +776,7 @@
                                             ></path>
                                           </svg>
                                         </div>
-                                        <div class="main_content__header-date-wrapper">
+                                        <div class="hidden inline-md">
                                           <svg
                                             viewBox="0 0 16 16"
                                             xmlns="http://www.w3.org/2000/svg"
