--- a/calendar_week.html
+++ b/calendar_week.html
@@ -185,7 +185,7 @@
                         July 2022
                       </div>
                       <div class="flex-items-center-content-between">
-                        <div class="main_content__header-date-wrapper">
+                        <div class="hidden inline-md">
                           <div class="main_content__header-date--today">
                             <button
                               aria-label="Today, 9 July 2022, Saturday"
@@ -475,7 +475,7 @@
                                             ></path>
                                           </svg>
                                         </div>
-                                        <div class="main_content__header-date-wrapper">
+                                        <div class="hidden inline-md">
                                           <svg
                                             viewBox="0 0 16 16"
                                             xmlns="http://www.w3.org/2000/svg"
@@ -777,7 +777,7 @@
                                             ></path>
                                           </svg>
                                         </div>
-                                        <div class="main_content__header-date-wrapper">
+                                        <div class="hidden inline-md">
                                           <svg
                                             viewBox="0 0 16 16"
                                             xmlns="http://www.w3.org/2000/svg"
