replace main_content__header-action-dots-btn -> hidden inline-md hidden-lg

--- a/calendar_agenda.html
+++ b/calendar_agenda.html
@@ -748,7 +748,7 @@
                               </div>
                             </div>
                           </div>
-                          <div class="main_content__header-action-dots-btn">
+                          <div class="hidden inline-md hidden-lg">
                             <div class="main_content__header-action-btn">
                               <div>
                                 <div>
